--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "cypress:open": "cypress open",
+    "cypress:run": "cypress run --browser chrome",
+    "cypress:test": "cypress run -- -- record --spec cypress/e2e/tests"
   },
   "dependencies": {
     "@headlessui/react": "^1.7.8",
@@ -24,6 +27,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
+    "cypress": "^12.5.1",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.4"
   }
