--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@types/react-dom": "18.0.10",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
+    "mongodb": "^5.0.1",
+    "mongoose": "^6.9.2",
     "next": "13.1.6",
     "pure-react-carousel": "^1.30.1",
     "react": "18.2.0",
