--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
     "axios": "^1.3.3",
+    "bcryptjs": "^2.4.3",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
+    "jose": "^4.12.0",
+    "jsonwebtoken": "^9.0.0",
     "mongodb": "^5.0.1",
     "mongoose": "^6.9.2",
     "next": "13.1.6",
