--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "mongodb": "^5.0.1",
     "mongoose": "^6.9.2",
     "next": "13.1.6",
+    "next-auth": "^4.19.2",
     "pure-react-carousel": "^1.30.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -36,6 +37,7 @@
     "typescript": "4.9.5"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "autoprefixer": "^10.4.13",
     "cypress": "^12.5.1",
     "postcss": "^8.4.21",
