--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.1",
     "react-hot-toast": "^2.4.0",
+    "react-paginate": "^8.1.4",
     "react-toastify": "^9.1.1",
+    "swr": "^2.0.4",
     "typescript": "4.9.5"
   },
   "devDependencies": {
