--- a/package.json
+++ b/package.json
@@ -22,12 +22,15 @@
     "bcryptjs": "^2.4.3",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
+    "fs-extra": "^11.1.0",
     "jose": "^4.12.0",
     "jsonwebtoken": "^9.0.0",
     "mongodb": "^5.0.1",
     "mongoose": "^6.9.2",
+    "multer": "^1.4.5-lts.1",
     "next": "13.1.6",
     "next-auth": "^4.19.2",
+    "next-connect": "^0.13.0",
     "pure-react-carousel": "^1.30.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -40,6 +43,7 @@
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
+    "@types/multer": "^1.4.7",
     "autoprefixer": "^10.4.13",
     "cypress": "^12.5.1",
     "postcss": "^8.4.21",
