--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,14 +6,16 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-      # Install NPM dependencies, cache them correctly
-      # and run all Cypress tests
+
+      - name: Write the cypress.env.json file 📝
+        run: |
+          echo '${{secrets.NEXTAUTH_SECRET}}' > .env.local
+          echo '${{secrets.MONGO_URI}}' > .env.local
+
+
       - name: End to End Testing
         uses: cypress-io/github-action@v5
         with:
           build: npm run build
           start: npm run start
           wait-on: "http://localhost:3000"
-        env:
-          NEXTAUTH_SECRET: ${{secrets.NEXTAUTH_SECRET}}
-          MONGO_URI: ${{secrets.MONGO_URI}}
