--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,6 +15,7 @@ jobs:
           JWT_SECRET_KEY: ${{secrets.JWT_SECRET_KEY }}
           JWT_EXPIRY: ${{secrets.JWT_EXPIRY }}
           CLOUDINARY_URL: ${{secrets.CLOUDINARY_URL }}
+          SECRET: ${{secrets.SECRET }}
 
         uses: cypress-io/github-action@v5
         with:
