--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-quill": "^2.0.0",
     "react-toastify": "^9.1.1",
     "swr": "^2.0.4",
+    "taos": "^1.0.2",
     "typescript": "4.9.5"
   },
   "devDependencies": {
