--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "compile:css": "sass --watch src/app/wpstyles.scss src/app/globals.css",
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build ",
     "start": "next start",
     "lint": "next lint",
     "cypress": "cypress open",
@@ -51,6 +51,7 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/multer": "^1.4.7",
     "@wordpress/base-styles": "^4.26.0",
+    "@wordpress/scripts": "^26.6.0",
     "autoprefixer": "^10.4.14",
     "cypress": "^12.5.1",
     "postcss": "^8.4.24",
