--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "mongodb": "^5.0.1",
     "mongoose": "^6.11.3",
     "multer": "^1.4.5-lts.1",
-    "next": "13.4.6",
+    "next": "^13.5.6",
     "next-auth": "^4.19.2",
     "next-connect": "^0.13.0",
     "pure-react-carousel": "^1.30.1",
@@ -54,7 +54,7 @@
     "@wordpress/base-styles": "^4.26.0",
     "@wordpress/scripts": "^26.6.0",
     "autoprefixer": "^10.4.14",
-    "cypress": "^12.5.1",
+    "cypress": "^13.8.1",
     "postcss": "^8.4.24",
     "postcss-cli": "^10.1.0",
     "sass": "^1.63.3",
