--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "lint": "next lint",
     "cypress": "cypress open",
     "cypress:run": "cypress run --browser chrome",
-    "test": "cypress run -- -- record --spec cypress/e2e/tests"
+    "test": "cypress run -- -- record --spec cypress/e2e/homepage.cy.js"
   },
   "dependencies": {
     "@apollo/client": "^3.7.15",
@@ -41,7 +41,6 @@
     "react-hook-form": "^7.43.1",
     "react-hot-toast": "^2.4.0",
     "react-paginate": "^8.1.4",
-    "react-quill": "^2.0.0",
     "react-toastify": "^9.1.1",
     "swiper": "^11.1.1",
     "swr": "^2.0.4",
