--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,4 +21,4 @@ jobs:
         with:
           build: npm run build
           start: npm run start
-          wait-on: "http://localhost:3000"
+          wait-on: "https://www.innovationsgp.com"
