--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "pure-react-carousel": "^1.30.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-google-recaptcha": "^3.1.0",
     "react-hook-form": "^7.43.1",
     "react-hot-toast": "^2.4.0",
     "react-paginate": "^8.1.4",
@@ -51,6 +52,7 @@
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
     "@types/multer": "^1.4.7",
+    "@types/react-google-recaptcha": "^2.1.9",
     "@wordpress/base-styles": "^4.26.0",
     "@wordpress/scripts": "^26.6.0",
     "autoprefixer": "^10.4.14",
